<resources>
    <string name="app_name">Vakiendologin</string>
    <string name="fondo_de_arriba">fondo de arriba</string>
    <string name="logo_de_la_aplicacion">logo de la aplicacion</string>
    <string name="contrase_a">Contraseña</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="descripcionboton_para_login">boton para login</string>
    <string name="email">Email</string>
</resources>